#  Copyright (c) 2019, The OpenThread Authors.
#  All rights reserved.
#
#  Redistribution and use in source and binary forms, with or without
#  modification, are permitted provided that the following conditions are met:
#  1. Redistributions of source code must retain the above copyright
#     notice, this list of conditions and the following disclaimer.
#  2. Redistributions in binary form must reproduce the above copyright
#     notice, this list of conditions and the following disclaimer in the
#     documentation and/or other materials provided with the distribution.
#  3. Neither the name of the copyright holder nor the
#     names of its contributors may be used to endorse or promote products
#     derived from this software without specific prior written permission.
#
#  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
#  AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
#  IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
#  ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
#  LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
#  CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
#  SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
#  INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
#  CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
#  ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
#  POSSIBILITY OF SUCH DAMAGE.

import("//build/config/nacl/config.gni")
import("//testing/libfuzzer/fuzzer_test.gni")
import("//testing/test.gni")

executable("mdns_mojo_client") {
  testonly = true
  sources = [
    "client.cpp",
    "mdns_mojo.cpp",
    "mdns_mojo.hpp",
    "mdns.hpp",
    "common/code_utils.hpp",
    "common/types.hpp",
  ]

  defines = [
    "TEST_IN_CHROMIUM"
  ]

  deps = [
    "//mdns_mojo_test/public/mojom",
    "//base",
    "//mojo/core/embedder",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/platform",
    "//mojo/public/cpp/system",
    "//chromecast/external_mojo/external_service_support:external_service",
    "//chromecast/external_mojo/public/cpp:common",
    "//chromecast/external_mojo/public/mojom",
  ]
}

executable("mdns_mojo_stub_service") {
  testonly = true
  sources = [
    "stub_mojo_service.cpp",
  ]

  deps = [
    "//mdns_mojo_test/public/mojom",
    "//base",
    "//mojo/core/embedder",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/platform",
    "//mojo/public/cpp/system",
    "//chromecast/external_mojo/external_service_support:external_service",
    "//chromecast/external_mojo/public/cpp:common",
    "//chromecast/external_mojo/public/mojom",
  ]
}

executable("standalone_mojo_broker_lite") {
  testonly = true
  sources = [
    "standalone_mojo_broker_lite.cpp",
  ]

  deps = [
    "//mdns_mojo_test/public/mojom",
    "//base",
    "//mojo/core/embedder",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/platform",
    "//mojo/public/cpp/system",
    "//chromecast/external_mojo/external_service_support:external_service",
    "//chromecast/external_mojo/public/cpp:common",
    "//chromecast/external_mojo/public/cpp:external_mojo_broker",
    "//chromecast/external_mojo/public/mojom",
  ]
}
